Update product controllers and add consumer router/controller
