# server/api/controllers/product/product.router.js
@@ -4,7 +4,7 @@ import productController from './product.controller';
 export default express
     .Router()
     .post('/', productController.create)
-    .get('/', productController.all)
-    .get('/:id', productController.byId)
+    .get('/:businessId', productController.all)
+    .get('/:businessId/:productId', productController.byId)
     .put('/:id', productController.update)
     .delete('/:id', productController.delete)
