# server/routes.js
@@ -1,7 +1,9 @@
 import businessRouter from './api/controllers/business/business.router';
 import productRouter from './api/controllers/product/product.router';
+import consumerRouter from './api/controllers/consumer/consumer.router';
 
 export default function routes(app) {
   app.use('/api/v1/business', businessRouter);
   app.use('/api/v1/product', productRouter);
+  app.use('/api/v1/consumer', consumerRouter);
 }
